// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infiniteHits() calls twice render(<Hits props />, container) 1`] = `
{
  "bindEvent": [Function],
  "cssClasses": {
    "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
    "disabledLoadPrevious": "ais-InfiniteHits-loadPrevious--disabled",
    "emptyRoot": "ais-InfiniteHits--empty",
    "item": "ais-InfiniteHits-item",
    "list": "ais-InfiniteHits-list",
    "loadMore": "ais-InfiniteHits-loadMore",
    "loadPrevious": "ais-InfiniteHits-loadPrevious",
    "root": "ais-InfiniteHits root cx",
  },
  "hasShowPrevious": false,
  "hits": [
    {
      "__position": 3,
      "objectID": "1",
    },
    {
      "__position": 4,
      "objectID": "2",
    },
  ],
  "insights": [Function],
  "isFirstPage": true,
  "isLastPage": true,
  "results": SearchResults {
    "_rawResults": [
      {
        "exhaustiveFacetsCount": true,
        "exhaustiveNbHits": true,
        "hits": [
          {
            "objectID": "1",
          },
          {
            "objectID": "2",
          },
        ],
        "hitsPerPage": 2,
        "nbHits": 2,
        "nbPages": 1,
        "page": 1,
        "params": "",
        "processingTimeMS": 0,
        "query": "",
      },
    ],
    "_state": SearchParameters {
      "disjunctiveFacets": [],
      "disjunctiveFacetsRefinements": {},
      "facets": [],
      "facetsExcludes": {},
      "facetsRefinements": {},
      "hierarchicalFacets": [],
      "hierarchicalFacetsRefinements": {},
      "index": "",
      "numericRefinements": {},
      "tagRefinements": [],
    },
    "disjunctiveFacets": [],
    "exhaustiveFacetsCount": true,
    "exhaustiveNbHits": true,
    "facets": [],
    "hierarchicalFacets": [],
    "hits": [
      {
        "objectID": "1",
      },
      {
        "objectID": "2",
      },
    ],
    "hitsPerPage": 2,
    "nbHits": 2,
    "nbPages": 1,
    "page": 1,
    "params": "",
    "persistHierarchicalRootCount": false,
    "processingTimeMS": 0,
    "query": "",
  },
  "sendEvent": [Function],
  "showMore": [Function],
  "showPrevious": [Function],
  "templateProps": {
    "templates": {
      "empty": [Function],
      "item": [Function],
      "showMoreText": [Function],
      "showPreviousText": [Function],
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "empty": false,
      "item": false,
      "showMoreText": false,
      "showPreviousText": false,
    },
  },
}
`;

exports[`infiniteHits() calls twice render(<Hits props />, container) 2`] = `
{
  "bindEvent": [Function],
  "cssClasses": {
    "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
    "disabledLoadPrevious": "ais-InfiniteHits-loadPrevious--disabled",
    "emptyRoot": "ais-InfiniteHits--empty",
    "item": "ais-InfiniteHits-item",
    "list": "ais-InfiniteHits-list",
    "loadMore": "ais-InfiniteHits-loadMore",
    "loadPrevious": "ais-InfiniteHits-loadPrevious",
    "root": "ais-InfiniteHits root cx",
  },
  "hasShowPrevious": false,
  "hits": [
    {
      "__position": 3,
      "objectID": "1",
    },
    {
      "__position": 4,
      "objectID": "2",
    },
  ],
  "insights": [Function],
  "isFirstPage": true,
  "isLastPage": true,
  "results": SearchResults {
    "_rawResults": [
      {
        "exhaustiveFacetsCount": true,
        "exhaustiveNbHits": true,
        "hits": [
          {
            "objectID": "1",
          },
          {
            "objectID": "2",
          },
        ],
        "hitsPerPage": 2,
        "nbHits": 2,
        "nbPages": 1,
        "page": 1,
        "params": "",
        "processingTimeMS": 0,
        "query": "",
      },
    ],
    "_state": SearchParameters {
      "disjunctiveFacets": [],
      "disjunctiveFacetsRefinements": {},
      "facets": [],
      "facetsExcludes": {},
      "facetsRefinements": {},
      "hierarchicalFacets": [],
      "hierarchicalFacetsRefinements": {},
      "index": "",
      "numericRefinements": {},
      "tagRefinements": [],
    },
    "disjunctiveFacets": [],
    "exhaustiveFacetsCount": true,
    "exhaustiveNbHits": true,
    "facets": [],
    "hierarchicalFacets": [],
    "hits": [
      {
        "objectID": "1",
      },
      {
        "objectID": "2",
      },
    ],
    "hitsPerPage": 2,
    "nbHits": 2,
    "nbPages": 1,
    "page": 1,
    "params": "",
    "persistHierarchicalRootCount": false,
    "processingTimeMS": 0,
    "query": "",
  },
  "sendEvent": [Function],
  "showMore": [Function],
  "showPrevious": [Function],
  "templateProps": {
    "templates": {
      "empty": [Function],
      "item": [Function],
      "showMoreText": [Function],
      "showPreviousText": [Function],
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "empty": false,
      "item": false,
      "showMoreText": false,
      "showPreviousText": false,
    },
  },
}
`;

exports[`infiniteHits() renders transformed items 1`] = `
{
  "bindEvent": [Function],
  "cssClasses": {
    "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
    "disabledLoadPrevious": "ais-InfiniteHits-loadPrevious--disabled",
    "emptyRoot": "ais-InfiniteHits--empty",
    "item": "ais-InfiniteHits-item",
    "list": "ais-InfiniteHits-list",
    "loadMore": "ais-InfiniteHits-loadMore",
    "loadPrevious": "ais-InfiniteHits-loadPrevious",
    "root": "ais-InfiniteHits",
  },
  "hasShowPrevious": false,
  "hits": [
    {
      "__position": 3,
      "objectID": "1",
      "transformed": true,
    },
    {
      "__position": 4,
      "objectID": "2",
      "transformed": true,
    },
  ],
  "insights": [Function],
  "isFirstPage": true,
  "isLastPage": true,
  "results": SearchResults {
    "_rawResults": [
      {
        "exhaustiveFacetsCount": true,
        "exhaustiveNbHits": true,
        "hits": [
          {
            "objectID": "1",
          },
          {
            "objectID": "2",
          },
        ],
        "hitsPerPage": 2,
        "nbHits": 2,
        "nbPages": 1,
        "page": 1,
        "params": "",
        "processingTimeMS": 0,
        "query": "",
      },
    ],
    "_state": SearchParameters {
      "disjunctiveFacets": [],
      "disjunctiveFacetsRefinements": {},
      "facets": [],
      "facetsExcludes": {},
      "facetsRefinements": {},
      "hierarchicalFacets": [],
      "hierarchicalFacetsRefinements": {},
      "index": "",
      "numericRefinements": {},
      "tagRefinements": [],
    },
    "disjunctiveFacets": [],
    "exhaustiveFacetsCount": true,
    "exhaustiveNbHits": true,
    "facets": [],
    "hierarchicalFacets": [],
    "hits": [
      {
        "objectID": "1",
      },
      {
        "objectID": "2",
      },
    ],
    "hitsPerPage": 2,
    "nbHits": 2,
    "nbPages": 1,
    "page": 1,
    "params": "",
    "persistHierarchicalRootCount": false,
    "processingTimeMS": 0,
    "query": "",
  },
  "sendEvent": [Function],
  "showMore": [Function],
  "showPrevious": [Function],
  "templateProps": {
    "templates": {
      "empty": [Function],
      "item": [Function],
      "showMoreText": [Function],
      "showPreviousText": [Function],
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "empty": false,
      "item": false,
      "showMoreText": false,
      "showPreviousText": false,
    },
  },
}
`;
